--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,23 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am your webapp.
+        <div class="container">
+            <div class="center">
+                <img src="https://qph.ec.quoracdn.net/main-thumb-157716352-200-sjukqoofmqhamsgchaxuibgkxocnopmc.jpeg" class="img-medium"/>
+            </div>
+            <br>
+            <h3>Personal</h3>    
+            <div class="center text-big bold">
+                Hi! I am Darshil Shah
+            </div>
+            <hr/>
+            <h3>Professional</h3>    
+            <div>
+                I'm Computer Engineering Student.
+            </div>
+            <hr/>
+            <div class="footer">
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
