[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
             </div>
             <br>
             <h3>Personal</h3>    
-            <div class="center text-big bold">
+            <div>
                 Hi! I am Darshil Shah
             </div>
             <hr/>
